<resources>
    <string name="app_name">Contacts</string>
    <string name="title_activity_new_contact">NewContactActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="add_contact_button">Add Contact Button</string>
    <string name="new_contact">New contact</string>
    <string name="no_contacts">No contacts yet</string>
</resources>